--- a/modal.css
+++ b/modal.css
@@ -1,18 +1,6 @@
 body{
   font-family: 'Inter';
 }
-.modal {
-    display: none; /* Hidden by default */
-    position: fixed; /* Stay in place */
-    z-index: 1; /* Sit on top */
-    left: 0;
-    top: 0;
-    width: 100%; /* Full width */
-    height: 100%; /* Full height */
-    overflow: auto; /* Enable scroll if needed */
-    background-color: rgb(0,0,0); /* Fallback color */
-    background-color: rgba(0,0,0,0.4); /* Black w/ opacity */
-  }
   
   /* Modal Content/Box */
   .modal-content {
@@ -36,7 +24,7 @@ body{
   
   .close:hover,
   .close:focus {
-    color: black;
+    color: white;
     text-decoration: none;
     cursor: pointer;
   }
