--- a/style.css
+++ b/style.css
@@ -30,6 +30,10 @@ body{
     padding: 10px 25px;
     
 }
+#total{
+    position: relative;
+    margin: auto;
+}
 
 .title h1{
     margin-top: 0px;
@@ -122,6 +126,7 @@ body{
 
 }
 .watchItem{
+    position: relative;
     display: grid;
     grid-template-areas: 
     "img img"
@@ -162,8 +167,38 @@ body{
     font-weight: black;
     margin: 0px;
 }
+.watchItem span{
+    position: absolute;
+    top: 1rem;
+    right: 1rem;
+    cursor: pointer;
+    padding-right: 6px;
+    padding-left: 5px;
+    padding-top: none;
+    padding-bottom: 2px;
 
+}
+.watchItem span:hover{
+    background-color: hsl(0, 100%, 60%);
+    border-radius: 100%;
 
+}
+
+.modal {
+    display: none; /* Hidden by default */
+    position: fixed; /* Stay in place */
+    z-index: 1; /* Sit on top */
+    left: 0;
+    top: 0;
+    width: 100%; /* Full width */
+    height: 100%; /* Full height */
+    overflow: auto; /* Enable scroll if needed */
+    background-color: rgb(0,0,0); /* Fallback color */
+    background-color: rgba(0,0,0,0.4); /* Black w/ opacity */
+  }
+
+ 
+  
 
 
 
